Autoversioning commit:  a non-deltaV client made a change to /3/admin/css/main_style.css

--- a/3/admin/css/main_style.css
+++ b/3/admin/css/main_style.css
@@ -168,6 +168,13 @@ nav.navbar{
 
 
 <!--大学电商栏目样式-begin-->
+.group_content{
+	display:none;
+}
+.show{
+	display:block;
+}
+
 
 .item_ul{
 	width:100%;
@@ -197,10 +204,6 @@ nav.navbar{
 .item_ul li a.active{
 	background:#F2F2F2;
 }
-
-
-
-
 <!--大学电商栏目样式-end-->
 
 
