--- a/admin/css/main_style.css
+++ b/admin/css/main_style.css
@@ -202,7 +202,7 @@ nav.navbar{
 	padding:1.2rem 1.2rem;
 }
 .item_ul li a.active{
-	background:#F2F2F2;
+	background:#E0E0E0;
 }
 <!--大学电商栏目样式-end-->
 
