Autoversioning commit:  a non-deltaV client made a change to /3/admin/css/main_style.css

--- a/3/admin/css/main_style.css
+++ b/3/admin/css/main_style.css
@@ -49,6 +49,8 @@ ul.xuyong-dropdown-menu a{
 
 #back{
 	font-size:16px;
+    background-color:#BDC3C7;
+    display:block;
 }
 
 .col-xs-xuyong .navbar{
