Autoversioning commit:  a non-deltaV client made a change to /3/admin/css/main_style.css

--- a/3/admin/css/main_style.css
+++ b/3/admin/css/main_style.css
@@ -207,7 +207,7 @@ nav.navbar{
 
 
 <!--show页面样式-begin-->
-.content_show{
+#content_show{
 	width:100%;
     height:450px;
     background-color:#fff;
