--- a/admin/css/show_style.css
+++ b/admin/css/show_style.css
@@ -1,7 +1,7 @@
 <!--show页面样式-begin-->
-#content_show{
+#header_style{
 	width:100%;
-    height:450px;
-    background-color:#fff;
+    height:53px;
+    background:#222;
 }
 <!--show页面样式-end-->
