--- a/3/css/module_shop_css/module_shop_style.css
+++ b/3/css/module_shop_css/module_shop_style.css
@@ -101,5 +101,8 @@
 }
 .detail-name-xy {
 	font-size:30px;
-    font-weight;bold;
+    font-weight:bold;
+}
+.detail-price-xy {
+	font-size:24px;font-weight:bold;color:#F08080;
 }
