--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -104,5 +104,5 @@
     font-weight:bold;
 }
 .detail-price-xy {
-	font-size:24px;font-weight:bold;color:#F08080;
+	font-size:24px;font-weight:bold;color:#F08080;margin:15px 0;
 }
