--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -106,3 +106,12 @@
 .detail-price-xy {
 	font-size:24px;font-weight:bold;color:#F08080;margin:15px 0;
 }
+.detail-detail-xy {
+	max-height:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
+}
+.detail-cart {
+	border:1px solid #F08080
+}
+
+
+
