--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -109,8 +109,8 @@
 .detail-detail-xy {
 	max-height:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
 }
-.detail-cart {
-	border:1px solid #F08080
+.detail-cart,.detail-buy {
+	border:1px solid #F08080;color:#F08080;
 }
 
 
