--- a/3/css/module_shop_css/module_shop_style.css
+++ b/3/css/module_shop_css/module_shop_style.css
@@ -110,7 +110,7 @@
 	height:310px;overflow:hidden;text-overflow:ellipsis;
 }
 .detail-cart,.detail-buy {
-	border:1px solid #F08080;color:#F08080;display:block;
+	border:1px solid #F08080;color:#F08080;display:block;text-align:center;
 }
 
 
