--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -97,7 +97,7 @@
 }
 
 .detail-style {
-	width:100%;height:500px;
+	width:100%;height:500px;border-radius:10px;
 }
 .detail-name-xy {
 	font-size:30px;
@@ -110,7 +110,7 @@
 	height:310px;overflow:hidden;text-overflow:ellipsis;
 }
 .detail-cart,.detail-buy {
-	border:1px solid #F08080;color:#F08080;display:block;text-align:center;margin-top:20px;
+	border:1px solid #F08080;color:#F08080;display:block;text-align:center;margin-top:20px;border-radius:5px;
 }
 
 
