Autoversioning commit:  a non-deltaV client made a change to /3/css/module_shop_css/module_shop_style.css

--- a/3/css/module_shop_css/module_shop_style.css
+++ b/3/css/module_shop_css/module_shop_style.css
@@ -112,6 +112,9 @@
 .detail-cart,.detail-buy {
 	border:1px solid #F08080;color:#F08080;display:block;text-align:center;margin-top:20px;border-radius:5px;cursor:pointer;
 }
+.detail-cart:hover,.detail-buy:hover {
+  border:1px solid #1abc9c;
+}
 
 
 
