--- a/3/css/module_shop_css/module_shop_style.css
+++ b/3/css/module_shop_css/module_shop_style.css
@@ -117,6 +117,6 @@
 }
 
 .to-goods-cart {
-	float:right;background:#EE7600;color:#fff;display:block;height:50px;width:50px;border-radius:20rem;line-height:50px;text-align:center;
+	float:right;background:#EE7600;color:#fff;display:block;height:50px;width:50px;border-radius:20rem;line-height:50px;text-align:center;font-size:24px;
 }
 
