--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -119,4 +119,6 @@
 .to-goods-cart {
 	float:right;background:#EE7600;color:#fff;display:block;height:80px;width:80px;border-radius:20rem;line-height:80px;text-align:center;font-size:24px;margin-top:10px;margin-right:15px;
 }
-
+.to-goods-cart:hover {
+	color:#1abc9c;
+}
