--- a/css/module_shop_css/module_shop_style.css
+++ b/css/module_shop_css/module_shop_style.css
@@ -128,4 +128,6 @@
 .common-line-height {
 	line-height:150px;
 }
-
+.single-item-goods {
+	height:150px;overflow:hidden;border:1px solid #0000CD;
+}
