Autoversioning commit:  a non-deltaV client made a change to /3/css/module_shop_css/module_shop_style.css

--- a/3/css/module_shop_css/module_shop_style.css
+++ b/3/css/module_shop_css/module_shop_style.css
@@ -129,5 +129,5 @@
 	line-height:150px;
 }
 .single-item-goods {
-	height:150px;overflow:hidden;border:1px solid #0000CD;display:inline-block;
+	height:150px;overflow:hidden;border:1px solid #0000CD;
 }
